Fix footer height on small screens

--- a/my-app/src/footer.css
+++ b/my-app/src/footer.css
@@ -56,6 +56,8 @@
   .footer {
     flex-flow: column;
     text-align: center;
+    height: auto;
+    padding-bottom: 100px;
   }
 
   .vegogo-logo {
